Fix z-index of input group icon

--- a/theme/assets/forms.css
+++ b/theme/assets/forms.css
@@ -28,7 +28,7 @@ form.form {
     right: var(--ui-padding-x);
     width: var(--size-4);
     color: var(--muted);
-    z-index: 1;
+    z-index: 2;
   }
 
   input:has(+ .icon) {
